# ProPico

./: .gitignore  ProPico.kicad_pcb  ProPico.kicad_prl  ProPico.kicad_pro  ProPico.kicad_sch  README.md  fp-lib-table  sym-lib-table  ~ProPico.kicad_pcb.lck
bom/: ibom.html
libs/ECS-120-12-36-AGN-TR3/: ECS-120-12-36-AGN-TR--3DModel-STEP-56544.STEP
libs/RP2040/: QFN40P700X700X90-57N.kicad_mod  RP2040.kicad_sym
libs/RP2040/RP2040.pretty/: RP2040-QFN-56.kicad_mod
libs/Raspberry_Pi_Pico/RPi_Pico.pretty/: CUI_SJ-3523-audio-jack.kicad_mod  DSUB-15-L77HDE15SD1CH4F.kicad_mod  MBR120_SOD-123.kicad_mod  RPi_Pico_SMD_TH.kicad_mod
libs/W25Q16JVUXIQ_TR/: IC_W25Q16JVUXIQ_TR.kicad_mod  W25Q16JVUXIQ_TR.kicad_sym
libs/connector/: Pico_20pin.kicad_mod  Pico_4pin.kicad_mod
outputs/blender/: propico.pcb3d
software/pro-pico-template/: .gitignore  CMakeLists.txt  blink.pio  main.cpp  upload.sh
software/pro-pico-template/lib/Memory/: CMakeLists.txt  LICENSE  README.md
software/pro-pico-template/lib/Memory/include/: Memory.hpp
software/pro-pico-template/lib/Memory/src/: Memory.cpp
